rawdec: fix decoding of QT WRAW files

Fix decoding of QT WRAW files.

From some tests it results that:

1. all of the AVI/MOV WRAW files (at least from the link posted
   to the trac ticket #108) need to be flipped
2. mov WRAW files need to use AVI color modes
3. assigning PAL8 mode by default to WRAW codec is not correct

Fix decoding of file CarltonMovie2.mov, fix trac issue #108.